# sac_ads

./: .gitignore  README.md  agent_mode.py  agent_mode_pygame.py  aim_mode_pygame.py  baseline_mode.py  baseline_mode_pygame.py  config.yaml  config_eval.yaml  env.py  evaluate.py  main.py  manual_mode.py  manual_mode_pygame.py  models.py  onvif.ipynb  pyproject.toml  requirements.txt  run_agent.py  run_baseline.py  run_manual.py  run_modes.py  runtime_options.py  sac.py  train.py  train_aim.py  train_selector.py  vec_env.py  visual_pygame.py  visual_ursina.py  viz.ipynb
configs/: config.yaml  config_aim.yaml  config_eval.yaml  config_select.yaml
core/: aim_utils.py  aimer.py  baseline.py  baseline_mode.py  best_baseline_mode.py  env.py  models_continuous.py  models_discrete.py  runtime_options.py  sac_continuous.py  sac_discrete.py  two_stage_agent.py  vec_env.py  visual_pygame.py
results/: baseline_metrics.txt  model_metrics.txt
results/weights/: actor.pt  critic1.pt  critic2.pt
results/weights_aim/: actor.pt  critic1.pt  critic2.pt
results/weights_selector/: actor.pt  critic1.pt  critic2.pt
visuals/: gif_recorder.py  visual_pygame.py  visual_ursina.py
weights/: actor.pt  critic1.pt  critic2.pt
