[project]
name = "sac_ads"
version = "0.1.0"
description = "Soft Actor-Critic implementation with adsorption environment"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.26",
    "torch>=2.0",
    "matplotlib>=3.8",
    "pygame>=2.5",
    "pyyaml>=6.0",
    "gymnasium>=0.29",
    "ursina>=8.3.0",
    "pillow>=10.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipython>=9.0",
    "ipykernel>=7.0",
]

[tool.setuptools]
py-modules = [
    "agent_mode",
    "baseline_mode",
    "env",
    "manual_mode",
    "models",
    "run_modes",
    "sac",
    "train",
    "visual_pygame",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
